# Ski-Patrol-App

./: LICENSE.md  README.md  config.example.ini  server_functions.py  test_server.py
Report Injuries/Report Injuries/: ContentView.swift  Report_InjuriesApp.swift
Report Injuries/Report Injuries.xcodeproj/: project.pbxproj
Report Injuries/Report InjuriesTests/: Report_InjuriesTests.swift
Report Injuries/Report InjuriesUITests/: Report_InjuriesUITests.swift
Report-Accident/Report-Accident/: AppDelegate.swift  DataSocket.swift  FormViewController.swift  GetRoundedButtonsUI.swift  Info.plist  SceneDelegate.swift  SocketDataManager.swift  ViewController.swift
Report-Accident/Report-Accident.xcodeproj/: project.pbxproj
Report-Accident/Report-Accident/Assets.xcassets/AppIcon.appiconset/: Contents.json
Report-Accident/Report-Accident/Assets.xcassets/cross-pic.imageset/: Contents.json
Report-Accident/Report-Accident/Assets.xcassets/home-page-pic.imageset/: Contents.json
Report-Accident/Report-Accident/Assets.xcassets/redAccent.colorset/: Contents.json
Report-Accident/Report-Accident/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
Report-Accident/Report-AccidentTests/: Report_AccidentTests.swift
Report-Accident/Report-AccidentUITests/: Report_AccidentUITests.swift
Server/: CMakeLists.txt  Main.cpp
Server/include/: ConnectionHandler.hpp  Request.hpp  Response.hpp
Server/src/: ConnectionHandler.cpp  Server.cpp
elevator-generator/: README.md  index.html  style.css
report-website/: display.php  index.html
report-website/css/: styles.css
(+6 files in other folders)
